--- a/ARMv6/Dockerfile
+++ b/ARMv6/Dockerfile
@@ -1,4 +1,4 @@
-FROM alexellis2/node4.x-arm:latest
+FROM alexellis2/node4.x-arm:armv6
 
 USER root
 WORKDIR /var/www/
@@ -14,11 +14,12 @@ RUN npm install -g pm2
 
 USER ghost
 WORKDIR /var/www/ghost
-RUN /bin/bash -c "time (npm install sqlite3)"
-RUN npm install
+RUN npm install sqlite3
 
+RUN npm install
 EXPOSE 2368
 EXPOSE 2369
 RUN ls && pwd
 RUN sed -e s/127.0.0.1/0.0.0.0/g ./config.example.js > ./config.js
 CMD ["node", "index.js"]
+
