Add PM2 start-up and produdction env

--- a/ARMv7/Dockerfile
+++ b/ARMv7/Dockerfile
@@ -20,5 +20,9 @@ RUN npm install
 EXPOSE 2368
 EXPOSE 2369
 RUN ls && pwd
+
+ENV NODE_ENV production
+
 RUN sed -e s/127.0.0.1/0.0.0.0/g ./config.example.js > ./config.js
-CMD ["node", "index.js"]
+CMD ["pm2", "start", "index.js", "--name", "blog", "--no-daemon"]
+
