--- a/ARMv6/Dockerfile
+++ b/ARMv6/Dockerfile
@@ -4,8 +4,8 @@ USER root
 WORKDIR /var/www/
 RUN mkdir -p ghost
 RUN apt-get update && apt-get -qy install wget unzip
-RUN wget https://ghost.org/zip/ghost-0.7.9.zip
-RUN unzip ghost-0.7.9.zip -d ghost
+RUN wget https://ghost.org/zip/ghost-0.8.0.zip
+RUN unzip ghost-*.zip -d ghost
 RUN useradd ghost -m -G www-data -s /bin/bash
 RUN chown ghost:www-data .
 RUN chown ghost:www-data ghost
